--- a/Desafio/Desafio12/style.css
+++ b/Desafio/Desafio12/style.css
@@ -1,1 +1,63 @@
-@charset "UTF-8";
+@charset "UTF-8"; 
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+header{
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding-top: 40px;
+}
+
+header> h1{
+    padding-bottom: 5px;
+    font-variant: small-caps;
+}
+
+header> p{
+    padding-bottom: 50px;
+}
+
+header a, footer a{
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+a:hover{
+    text-decoration:underline ;
+}
+
+section{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    padding-left: 20px;
+    line-height: 2em;
+}
+
+
+.normal{
+    background-color: white;
+    color: black;
+}
+
+.imagem{
+    background-color: rgba(0, 0, 0, 0.434);
+    color: white;
+}
+
+section.imagem> p {
+    background-color: rgba(0, 0, 0, 0.488);
+    width: 300px;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+footer{
+    background-color: black;
+    color: white;
+    padding: 10px;
+}
