--- a/Desafio/Desafio12/style.css
+++ b/Desafio/Desafio12/style.css
@@ -5,16 +5,34 @@
     padding: 0px;
 }
 
+@import url('https://fonts.googleapis.com/css2?family= Passion +One & display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family= Sriracha & display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
+
+html, body{
+    min-height: 100vh;
+    background-color: darkgrey;
+    font-family: var(--font1);
+}
+
 header{
     background-color: black;
     color: white;
     text-align: center;
-    padding-top: 40px;
+    padding-top: 40px;   
 }
 
 header> h1{
     padding-bottom: 5px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 8vw;
 }
 
 header> p{
@@ -32,6 +50,8 @@ a:hover{
 }
 
 section{
+    font-family: var(--font3);
+    font-size: 1.2em;
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 20px;
@@ -51,7 +71,7 @@ section{
 
 section.imagem> p {
     background-color: rgba(0, 0, 0, 0.488);
-    width: 300px;
+    display: inline-block;
     padding: 5px;
     border-radius: 5px;
 }
