--- a/Desafio/Desafio12/style.css
+++ b/Desafio/Desafio12/style.css
@@ -52,8 +52,8 @@ a:hover{
 section{
     font-family: var(--font3);
     font-size: 1.2em;
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding-top: 20vh;
+    padding-bottom: 20vh;
     padding-left: 20px;
     line-height: 2em;
 }
@@ -67,13 +67,31 @@ section{
 .imagem{
     background-color: rgba(0, 0, 0, 0.434);
     color: white;
+    background-size: cover;
+    box-shadow: inset 6px 7px 15px 0px rgba(0, 0, 0, 0.500);
+    background-attachment: fixed;
 }
 
 section.imagem> p {
-    background-color: rgba(0, 0, 0, 0.488);
+    background-color: rgba(150, 150, 150, 0.600);
     display: inline-block;
     padding: 5px;
     border-radius: 5px;
+}
+
+section> p{
+    padding-bottom: 3em;
+}
+
+#img01{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+
+}
+
+#img02{
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
 }
 
 footer{
